# realsense_bidings_with_yolov5

./: Dockerfile  README.md  enter_container.sh  requirements.txt  run_container.sh
exemples/: enter_container.sh
exemples/src/: main.py
exemples/src/modules/: model.py
realsense_bidings/bind/depthcam/: CMakeLists.txt
realsense_bidings/interfaces/: depthcam.cpp
realsense_bidings/scripts/: build.py.detection.sh
realsense_bidings/src/modules/: depthcam.h
